Fix: Corrige flujo completo de autenticación y creación de posts